--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
   web:
-    image: ubongpr7/campaign_backend:latest
+    build: .
     env_file: .env 
     command: >
       sh -c "python manage.py makemigrations &&
              python manage.py migrate &&
-             python manage.py runserver 7725:7725"
+             python manage.py runserver"
     volumes:
       - .:/app
     ports:
