--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     command: >
       sh -c "python manage.py makemigrations &&
              python manage.py migrate &&
-             python manage.py runserver"
+             python manage.py runserver 0.0.0.0:7726"
     volumes:
       - .:/app
     ports:
-      - "7725:7725"
+      - "7726:7725"
